// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Highlighter - Highlight renders a highlight 1`] = `
<em
  className="highlighted"
>
  test
</em>
`;

exports[`Highlighter - Highlight renders a nonhighlight 1`] = `
<div
  className="nonHighlighted"
>
  test
</div>
`;

exports[`Highlighter - multi renders a custom className 1`] = `
<span
  className="MyCustomHighlighter"
>
  <span
    key="0"
  >
    <Highlight
      cx={[Function]}
      highlightedTagName="em"
      isHighlighted={false}
      key="0"
      nonHighlightedTagName="span"
      value="Apple"
    />
    <span
      className="separator"
    >
      , 
    </span>
  </span>
  <span
    key="1"
  >
    <Highlight
      cx={[Function]}
      highlightedTagName="em"
      isHighlighted={true}
      key="0"
      nonHighlightedTagName="span"
      value="Sam"
    />
    <Highlight
      cx={[Function]}
      highlightedTagName="em"
      isHighlighted={false}
      key="1"
      nonHighlightedTagName="span"
      value="sung"
    />
    <span
      className="separator"
    >
      , 
    </span>
  </span>
  <span
    key="2"
  >
    <Highlight
      cx={[Function]}
      highlightedTagName="em"
      isHighlighted={false}
      key="0"
      nonHighlightedTagName="span"
      value="Philips"
    />
  </span>
</span>
`;

exports[`Highlighter - multi renders a highlighted value 1`] = `
<span
  className=""
>
  <span
    key="0"
  >
    <Highlight
      cx={[Function]}
      highlightedTagName="em"
      isHighlighted={false}
      key="0"
      nonHighlightedTagName="span"
      value="Apple"
    />
    <span
      className="separator"
    >
      , 
    </span>
  </span>
  <span
    key="1"
  >
    <Highlight
      cx={[Function]}
      highlightedTagName="em"
      isHighlighted={true}
      key="0"
      nonHighlightedTagName="span"
      value="Sam"
    />
    <Highlight
      cx={[Function]}
      highlightedTagName="em"
      isHighlighted={false}
      key="1"
      nonHighlightedTagName="span"
      value="sung"
    />
    <span
      className="separator"
    >
      , 
    </span>
  </span>
  <span
    key="2"
  >
    <Highlight
      cx={[Function]}
      highlightedTagName="em"
      isHighlighted={false}
      key="0"
      nonHighlightedTagName="span"
      value="Philips"
    />
  </span>
</span>
`;

exports[`Highlighter - multi renders a highlighted value with a custom nonHighlightedTagName 1`] = `
<span
  className=""
>
  <span
    key="0"
  >
    <Highlight
      cx={[Function]}
      highlightedTagName="em"
      isHighlighted={false}
      key="0"
      nonHighlightedTagName="p"
      value="Apple"
    />
    <span
      className="separator"
    >
      , 
    </span>
  </span>
  <span
    key="1"
  >
    <Highlight
      cx={[Function]}
      highlightedTagName="em"
      isHighlighted={true}
      key="0"
      nonHighlightedTagName="p"
      value="Sam"
    />
    <Highlight
      cx={[Function]}
      highlightedTagName="em"
      isHighlighted={false}
      key="1"
      nonHighlightedTagName="p"
      value="sung"
    />
    <span
      className="separator"
    >
      , 
    </span>
  </span>
  <span
    key="2"
  >
    <Highlight
      cx={[Function]}
      highlightedTagName="em"
      isHighlighted={false}
      key="0"
      nonHighlightedTagName="p"
      value="Philips"
    />
  </span>
</span>
`;

exports[`Highlighter - multi renders a highlighted value with a custom separator 1`] = `
<span
  className=""
>
  <span
    key="0"
  >
    <Highlight
      cx={[Function]}
      highlightedTagName="em"
      isHighlighted={false}
      key="0"
      nonHighlightedTagName="span"
      value="Apple"
    />
    <span
      className="separator"
    >
      -
    </span>
  </span>
  <span
    key="1"
  >
    <Highlight
      cx={[Function]}
      highlightedTagName="em"
      isHighlighted={true}
      key="0"
      nonHighlightedTagName="span"
      value="Sam"
    />
    <Highlight
      cx={[Function]}
      highlightedTagName="em"
      isHighlighted={false}
      key="1"
      nonHighlightedTagName="span"
      value="sung"
    />
    <span
      className="separator"
    >
      -
    </span>
  </span>
  <span
    key="2"
  >
    <Highlight
      cx={[Function]}
      highlightedTagName="em"
      isHighlighted={false}
      key="0"
      nonHighlightedTagName="span"
      value="Philips"
    />
  </span>
</span>
`;

exports[`Highlighter - multi renders a highlighted value with a custom tagName 1`] = `
<span
  className=""
>
  <span
    key="0"
  >
    <Highlight
      cx={[Function]}
      highlightedTagName="strong"
      isHighlighted={false}
      key="0"
      nonHighlightedTagName="span"
      value="Apple"
    />
    <span
      className="separator"
    >
      , 
    </span>
  </span>
  <span
    key="1"
  >
    <Highlight
      cx={[Function]}
      highlightedTagName="strong"
      isHighlighted={true}
      key="0"
      nonHighlightedTagName="span"
      value="Sam"
    />
    <Highlight
      cx={[Function]}
      highlightedTagName="strong"
      isHighlighted={false}
      key="1"
      nonHighlightedTagName="span"
      value="sung"
    />
    <span
      className="separator"
    >
      , 
    </span>
  </span>
  <span
    key="2"
  >
    <Highlight
      cx={[Function]}
      highlightedTagName="strong"
      isHighlighted={false}
      key="0"
      nonHighlightedTagName="span"
      value="Philips"
    />
  </span>
</span>
`;

exports[`Highlighter - multi renders a non highlighted value 1`] = `
<span
  className=""
>
  <span
    key="0"
  >
    <Highlight
      cx={[Function]}
      highlightedTagName="em"
      isHighlighted={false}
      key="0"
      nonHighlightedTagName="span"
      value="Apple"
    />
    <span
      className="separator"
    >
      , 
    </span>
  </span>
  <span
    key="1"
  >
    <Highlight
      cx={[Function]}
      highlightedTagName="em"
      isHighlighted={false}
      key="0"
      nonHighlightedTagName="span"
      value="Samsung"
    />
    <span
      className="separator"
    >
      , 
    </span>
  </span>
  <span
    key="2"
  >
    <Highlight
      cx={[Function]}
      highlightedTagName="em"
      isHighlighted={false}
      key="0"
      nonHighlightedTagName="span"
      value="Philips"
    />
  </span>
</span>
`;

exports[`Highlighter - simple renders a highlighted value 1`] = `
<span
  className=""
>
  <Highlight
    cx={[Function]}
    highlightedTagName="em"
    isHighlighted={true}
    key="0"
    nonHighlightedTagName="span"
    value="Ap"
  />
  <Highlight
    cx={[Function]}
    highlightedTagName="em"
    isHighlighted={false}
    key="1"
    nonHighlightedTagName="span"
    value="ple"
  />
</span>
`;

exports[`Highlighter - simple renders a highlighted value with a custom nonHighlightedTagName 1`] = `
<span
  className=""
>
  <Highlight
    cx={[Function]}
    highlightedTagName="em"
    isHighlighted={true}
    key="0"
    nonHighlightedTagName="p"
    value="Ap"
  />
  <Highlight
    cx={[Function]}
    highlightedTagName="em"
    isHighlighted={false}
    key="1"
    nonHighlightedTagName="p"
    value="ple"
  />
</span>
`;

exports[`Highlighter - simple renders a highlighted value with a custom tagName 1`] = `
<span
  className=""
>
  <Highlight
    cx={[Function]}
    highlightedTagName="strong"
    isHighlighted={true}
    key="0"
    nonHighlightedTagName="span"
    value="Ap"
  />
  <Highlight
    cx={[Function]}
    highlightedTagName="strong"
    isHighlighted={false}
    key="1"
    nonHighlightedTagName="span"
    value="ple"
  />
</span>
`;

exports[`Highlighter - simple renders a non highlighted value 1`] = `
<span
  className=""
>
  <Highlight
    cx={[Function]}
    highlightedTagName="em"
    isHighlighted={false}
    key="0"
    nonHighlightedTagName="span"
    value="Apple"
  />
</span>
`;

exports[`Highlighter - simple renders with a custom className 1`] = `
<span
  className="MyCustomHighlighter"
>
  <Highlight
    cx={[Function]}
    highlightedTagName="em"
    isHighlighted={true}
    key="0"
    nonHighlightedTagName="span"
    value="Ap"
  />
  <Highlight
    cx={[Function]}
    highlightedTagName="em"
    isHighlighted={false}
    key="1"
    nonHighlightedTagName="span"
    value="ple"
  />
</span>
`;
